Tests/Bad/no_main.min
function not_main;
beginparams
endparams
beginlocals
	n : integer;
	r : array [10] of integer;
endlocals
beginbody
 	read n;
 	n := n + 1;
 	write n;
 endbody
